Added units table

--- a/app/views/employees/index.html.erb
+++ b/app/views/employees/index.html.erb
@@ -38,4 +38,5 @@
 
 <br>
 
-<%= link_to 'New Employee', new_employee_path %>
+<%= link_to 'New Employee', new_employee_path %><br/>
+<%=link_to "Home", root_path %>
