--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -2,4 +2,5 @@
 <h2>WEEK 1: TO COMPLETE SETTING UP DATABASE MIGRATION FILES AND SCHEMA</p>
 
 <h3>THE FOLLOWING TABLES DONE</h3>
-<%=link_to "Employees table", employees_path %>
+<%=link_to "Employees table", employees_path %><br/><br/>
+<%=link_to "Units table", units_path %>
