--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -2,5 +2,7 @@
 <h2>WEEK 1: TO COMPLETE SETTING UP DATABASE MIGRATION FILES AND SCHEMA</p>
 
 <h3>THE FOLLOWING TABLES DONE</h3>
-<%=link_to "Employees table", employees_path %><br/><br/>
-<%=link_to "Units table", units_path %>
+  <%=link_to "Employees table", employees_path %><br/><br/>
+  <%=link_to "Units table", units_path %><br>
+  <%=link_to "Circulars", circulars_path %><br>
+  <%=link_to "Registers", registers_path %><br>
