--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -3,6 +3,6 @@
 
 <h3>THE FOLLOWING TABLES DONE</h3>
   <%=link_to "Employees table", employees_path %><br/><br/>
-  <%=link_to "Units table", units_path %><br>
-  <%=link_to "Circulars", circulars_path %><br>
-  <%=link_to "Registers", registers_path %><br>
+  <%=link_to "Units table", units_path %><br/><br/>
+  <%=link_to "Circulars", circulars_path %><br/><br/>
+  <%=link_to "Registers", registers_path %><br/><br/>
