--- a/app/views/circulars/index.html.erb
+++ b/app/views/circulars/index.html.erb
@@ -5,12 +5,11 @@
 <table>
   <thead>
     <tr>
-      <th>Circular Id</th>
-      <th>Circular Type</th>
+      <th>Circular type</th>
       <th>From</th>
       <th>Keywords</th>
-      <th>Receipt Date</th>
-      <th>Broadcast Date</th>
+      <th>Receipt date</th>
+      <th>Broadcast date</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -18,12 +17,11 @@
   <tbody>
     <% @circulars.each do |circular| %>
       <tr>
-        <td><%= circular.circularid %></td>
-        <td><%= circular.circulartype %></td>
+        <td><%= circular.circular_type %></td>
         <td><%= circular.from %></td>
         <td><%= circular.keywords %></td>
-        <td><%= circular.receiptdate %></td>
-        <td><%= circular.broadcastdate %></td>
+        <td><%= circular.receipt_date %></td>
+        <td><%= circular.broadcast_date %></td>
         <td><%= link_to 'Show', circular %></td>
         <td><%= link_to 'Edit', edit_circular_path(circular) %></td>
         <td><%= link_to 'Destroy', circular, method: :delete, data: { confirm: 'Are you sure?' } %></td>
