--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -5,13 +5,12 @@
 <table>
   <thead>
     <tr>
-      <th>Register ID</th>
-      <th>Register Type</th>
+      <th>Register type</th>
       <th>Deadline</th>
-      <th>First Reminder</th>
-      <th>Number of Reminders</th>
-      <th>Reminder Period</th>
-      <th>Reminder Email</th>
+      <th>First reminder</th>
+      <th>No of reminders</th>
+      <th>Reminder period</th>
+      <th>Reminder email</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -19,13 +18,12 @@
   <tbody>
     <% @registers.each do |register| %>
       <tr>
-        <td><%= register.registerid %></td>
-        <td><%= register.registertype %></td>
+        <td><%= register.register_type %></td>
         <td><%= register.deadline %></td>
-        <td><%= register.firstreminder %></td>
-        <td><%= register.numofreminders %></td>
-        <td><%= register.reminderperiod %></td>
-        <td><%= register.reminderemail %></td>
+        <td><%= register.first_reminder %></td>
+        <td><%= register.no_of_reminders %></td>
+        <td><%= register.reminder_period %></td>
+        <td><%= register.reminder_email %></td>
         <td><%= link_to 'Show', register %></td>
         <td><%= link_to 'Edit', edit_register_path(register) %></td>
         <td><%= link_to 'Destroy', register, method: :delete, data: { confirm: 'Are you sure?' } %></td>
