Added validation to employee ids

--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -6,7 +6,7 @@
   <%=link_to "Units table", units_path %><br/><br/>
   <%=link_to "Circulars", circulars_path %><br/><br/>
   <%=link_to "Registers", registers_path %><br/><br/>
-  <%=link_to "Reports", reports_path %><br/><br/>
+  <h><strong>Inspection report table</strong></h><br/><br/>
   <h><strong>Audits table (database is setup , 1 Unit can have many audits)</strong></h><br/><br/>
   <h><strong>Auditors table (It is a bridge between Audits and Employees )</strong></h>
   <p>It contains 3 columns: audit_id , employee_id , post</p>
